...
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/genre"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        />
...
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_share"
        android:background="@drawable/bg_btn"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favorite"
        android:layout_width="125dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/share"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginVertical="20dp"
...
