<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Show</string>
    <string name="detail_film">Detail Film</string>
    <string name="share">Share</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="background_film">background film</string>
    <string name="image_film">image film</string>
</resources>